<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

       <!-- <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/profileIV"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/profile_picture"
                android:contentDescription="@string/content_description"/>

        </android.support.v7.widget.CardView>-->

        <ImageView
            android:id="@+id/profileIV"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/profile_picture"
            android:contentDescription="@string/content_description"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/profile_name"
            android:textSize="@dimen/textview_size"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_medium"/>

        <View
            android:layout_marginTop="20dp"
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_android"
            android:textSize="@dimen/textview_size"
            android:fontFamily="@font/roboto_light"/>

        <TextView
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textSize="@dimen/textview_size"
            android:fontFamily="@font/roboto_light"/>

        <TextView
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_email"
            android:textSize="@dimen/textview_size"
            android:fontFamily="@font/roboto_light"/>

        <TextView
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_phone"
            android:textSize="@dimen/textview_size"
            android:fontFamily="@font/roboto_light"/>

        <TextView
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_slack"
            android:textSize="@dimen/textview_size"
            android:fontFamily="@font/roboto_light"/>

    </LinearLayout>

</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>